--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -14,9 +14,11 @@ p {
 	text-align: center;
 	font-family:'Lora','Roboto', 'Apercu', sans-serif;
 	color:#333;
-	
 
 }
+
+#story{position: absolute;
+	top:1em;}
 
 .inputs{width:90vw;
 	margin:0 auto 0 auto;
