--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -26,6 +26,10 @@ p {
 	padding-top: 20vh;
 }
 
+#story{width:100vw;
+	margin: 0 auto 0 auto;
+	}
+
 input{border: none; 
 	width: 100%;
 	font-size: 3vw;
